# OptiStock

./: .gitignore  Examples.ipynb  README.md  pyproject.toml
docs/: causal.md  forecasting.md  orchestrators.md  priors.md  solver.md
inventory_management/: forecasting.py  items.py  solvers.py
inventory_management/plot_suite/: __init__.py  core.py  portfolio.py  single_item.py
news_vendor/: demand_distribution.py  items.py  plotting.py  solvers.py  yeild_distributions.py
notebooks/: 10_Causal_Calibration.ipynb  1_Introduction.ipynb  2_Mulit_Item_and_constraints.ipynb  3_Yield_distributions.ipynb  4_Forecasting_Example.ipynb  5_Manager_Class.ipynb  5_Stockouts.ipynb  6_Manager_Class.ipynb  7_Inventory_Policy.ipynb  8_Advanced_Forecasting.ipynb  9_Hierarchical_Forecasting.ipynb  Examples.ipynb  Forecasting_Example.ipynb  Introduction.ipynb  Mulit_Item_and_constraints.ipynb  README.md  Yield_distributions.ipynb  state_space.ipynb
notes/: hierarchical_models.md  inventory_management.md  state_space_models.md  stochastic_opt.md
notes/explainers/: solvers.ipynb  state_space_example.ipynb
optistock/: forecasting.py  items.py  solvers.py  stockkeep.py
optistock/plot_suite/: interactive.py
src/optistock/: __init__.py  forecasting.py  inventory_policy.py  solvers.py  stockkeep.py
src/optistock/causal/: __init__.py  base.py  lift_constraints.py  priors.py  synthetic_control.py
src/optistock/distributions/: demand_distributions.py
src/optistock/forecasting/: __init__.py  base.py  linear_regressors.py  mix_media_models.py  priors.py  state_space.py
src/optistock/plot_suite/: __init__.py  core.py  interactive.py  portfolio.py  risk.py  single_item.py
