[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_management"
version = "0.1.0"
description = "Stochastic Inventory Optimization Framework"
authors = [
  { name="Johann Mynhardt Bouwer", email="bouwer2608@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "streamlit",
    "ipywidgets",
    "xarray"
]

[tool.setuptools.packages.find]
# This automatically finds the 'inventory_management' folder
where = ["."]