[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optistock"
version = "0.1.0"
description = "Stochastic Inventory Optimization Framework"
readme = "README.md"
authors = [
  { name="Johann Mynhardt Bouwer", email="bouwer2608@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "streamlit",
    "ipywidgets",
    "xarray",
    "pymc",
    "arviz",
    "pymc-bart"
]

[project.urls]
"Homepage" = "https://github.com/JohannBouwer/OptiStock"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_management*"]